# QuSim

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  launch.bat  launch.py  launch.sh  package-lock.json  pyproject.toml  requirements.txt  run_api.py  setup_venv.py  wait_and_open.py
docs/: README.md
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: BlochSphere.tsx  CNOTGateComponent.tsx  CircuitEditor.tsx  EnhancedCircuitEditor.tsx  GateComponent.tsx  GatePalette.tsx  MetricsDisplay.tsx  StateVisualization.tsx  VisualCircuitEditor.tsx  WireComponent.tsx
frontend/src/services/: api.ts
notebooks/: 01_basic_circuits.ipynb  02_noise_modeling.ipynb  03_entanglement.ipynb
qusim/: __init__.py
qusim/api/: __init__.py  main.py  routes.py
qusim/backends/: __init__.py  base.py  density_matrix.py  noisy_backend.py  selector.py  stabilizer.py  statevector.py
qusim/core/: __init__.py  circuit.py  execution.py  gates.py  state.py
qusim/diagnostics/: __init__.py  assumptions.py  failure.py  sensitivity.py
qusim/dsl/: __init__.py  parser.py
qusim/metrics/: __init__.py  entanglement.py  fidelity.py
qusim/noise/: __init__.py  channels.py  kraus.py
qusim/qec/: __init__.py  codes.py  tracking.py
qusim/resources/: __init__.py  tracking.py
qusim/visualization/: __init__.py  bloch.py  density.py  metrics.py  resources.py
tests/: test_circuit.py
